Fixed gap

--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ main {
     display: grid;
     grid-template-columns: 3;
     grid-template-rows: 2;
-    gap:10px;
+    gap:20px;
 }
 
 .onework, .secondwork, .thirdwork, .fourthwork, .fifthwork, .sixthwork {
